# Lab

addr-pointer/: addr-pointer.cc
cmake3/: CMakeLists.txt  bbb.cpp
cmd-pq/: cmd_pq.py
cuda-d2dcpy-1block/: cpy_d2d.cu
cuda-event-record/: cuda-event-record.cu
cuda-eventElapse/: complicated-case.cu  cuda-eventElapse.cu
cuda-idx-pci-bus/: cuda_alignment.cu  cuda_idx_pci_bus.cu
cuda-memcpy/: memcpy_d2d.cu  memcpy_h2d.cu
cuda-pipeline/: cuda-pipeline.cu
deepspeed/: z2_gradient_partitioning_init.py
diffusers-dreambooth/: accelerate_train.sh  inference.py  train.sh
exps/cluster_partition/: adjacent_combinations.py  (+2 more)
hybrid-linkage/: CMakeLists.txt  dynamic.cpp  dynamic.hpp  main.cpp  static.cpp  static.hpp
iam-policies/: CreateODCR.json  CustomAWSLambdaFullAccess.json  DecodeAuthorizationMessage.json  EC2CapacityReservationService.json
mpi-comm/: main.cc
nccl-libfabric/: CMakeLists.txt  ar.cpp  mocker.cpp  run_ar.sh
nvcc-gencode/: architecture.cu  architecture.sh
os/: ifaddrs.cpp
pgnccl-devices/: pgnccl-barrier.py
pmix/: output_world_size.cc
scripts/: credentials-sh2py.py  deserialize_json.py  eip.py  get_cr.py  params.py  parse_maskrcnn_tp.py  parse_nccl_data.py  parse_nccl_info_coll.py  set_node_rank.py  slurm_hostfile.py
sm-hyperparameters/: test_mpi_dist.ipynb  test_python_ep.ipynb  test_shell_ep.ipynb
std/: enum.cpp  errno.cpp  function.cpp  future.cu  hash.cpp  iterator.cpp  struct.cu  union.cpp  unique_ptr.cpp
tflops-benchmark/: tflops-benchmark.py
torch-cache/: device_mem_usage.py
torch-pgnccl/: exp.py  rubik_runner.sh
(+3 files in other folders)
